# robotics

./: .gitignore  .gitmodules  Dockerfile  README.md  base.yaml  compose.yaml  compose.yml
.github/workflows/: main.yml
containers/: Containerfile  Dockerfile  Dockerfile.create
demo/: README.md
demo/basic_mobile_base/diffbot/urdf/: diffbot_description.urdf.xacro
demo/mobile_platform_with_hands/: CMakeLists.txt  package.xml
demo/mobile_platform_with_hands/bringup/config/: forward_position_publisher.yaml  three_robots_controllers.yaml
demo/mobile_platform_with_hands/bringup/launch/: three_robots.launch.py
demo/mobile_platform_with_hands/description/ros2_control/: threedofbot.ros2_control.xacro
demo/mobile_platform_with_hands/description/urdf/: three_robots.urdf.xacro
demo/ros2_control_mobile_platform_with_hands/: CMakeLists.txt  package.xml
hardware_interfaces/: CMakeLists.txt  package.xml
hardware_interfaces/hardware_interfaces/: CMakeLists.txt  package.xml
hardware_interfaces/include/hardware_interfaces/: roomba_control.hpp
hardware_interfaces/roomba_hardware_interface/: CMakeLists.txt  package.xml  roomba_control.xml
hardware_interfaces/roomba_hardware_interface/include/hardware_interfaces/: roomba_control.hpp
hardware_interfaces/roomba_hardware_interface/include/roomba_hardware_interface/: roomba_control.hpp
hardware_interfaces/roomba_hardware_interface/src/: roomba_control.cpp
hardware_interfaces/src/: roomba_control.cpp
hardware_interfaces/system_interfaces/: roomba_control.xml
lilpleb/: CMakeLists.txt  package.xml
lilpleb/config/: controls.yaml
lilpleb/launch/: controls.launch.py  hardware.launch.py  lilpleb.launch.py  lilpleb_robot.launch.py  lilpleb_sim.launch.py  lilpleb_teleop.launch.py
lilpleb/rviz/: lilpleb.rviz  view_robot.rviz
lilpleb_simulation/: package.xml  setup.cfg  setup.py
lilpleb_simulation/launch/: lilpleb_simulation.launch.py
misc/: Dockerfile
msg_hands/: CMakeLists.txt  README.md  package.xml
msg_hands/msg/: Hand.msg
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: lilpleb.controllers.yaml
robot_description/controls/: lilpleb.controls.yaml  lilpleb.ros2_control.xacro
robot_description/launch/: controls.launch.py  rsp.launch.py  rviz.launch.py
robot_description/robots/: lilpleb.urdf.xacro
robot_description/ros2_control/: lilpleb.ros2_control.xacro
robot_description/urdf/: lilpleb.urdf.xacro
robots/demo_basic_mobile_base/: CMakeLists.txt  package.xml
robots/demo_mobile_platform_with_hands/bringup/launch/: test_forward_position_controller.launch.py
robots/lilpleb/: CMakeLists.txt  package.xml
robots/lilpleb/launch/: lilpleb.launch.py
runtimes/: Containerfile  runtime_architecture.drawio
runtimes/controls_dev/: CMakeLists.txt  package.xml
runtimes/controls_runtime/: CMakeLists.txt  package.xml
simulation/: CMakeLists.txt  package.xml
simulation/launch/: gazebo.launch.py
system_bringup/: CMakeLists.txt  package.xml
system_bringup/launch/: rsp.launch.py  rviz.launch.py  view_robot.launch.py
teleoperator/: CMakeLists.txt  package.xml
teleoperator/config/: teleop_params.yaml
teleoperator/launch/: keyboard.launch.py
utils_python/: package.xml  setup.cfg  setup.py
utils_python/utils_python/: files.py
vision_cameras/: Dockerfile  package.xml  setup.cfg  setup.py
vision_cameras/launch/: calibration_launch.py
vision_cameras/vision_cameras/: calib_utils.py  calibration.py  camera.py  stereo_camera.py
vision_depth_pro/: .Dockerfile.swp  Dockerfile  README.md  hand_tracking.py
vision_stereo_hand_tracking/: Dockerfile  README.md  gpu_hands.py  hand_tracking.py  package.xml  setup.cfg  setup.py
vision_stereo_hand_tracking/config/: calibration_parameters.yaml
vision_stereo_hand_tracking/rviz/: marker_array.rviz
vision_stereo_hand_tracking/vision_stereo_hand_tracking/: main.py  utils.py  vision.py
