<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_bringup</name>
  <version>0.0.1</version>
  <description>Package for the entire system bringup</description>
  <maintainer email="dmitrii@gusev.tech">Dmitrii Gusev</maintainer>
  <license>GNU Public License 3</license>

  <depend>ros2launch</depend>
  <depend>xacro</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
