<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_stereo_hand_tracking</name>
  <version>1.0.0</version>
  <description>Vision package that implements mediapipe for stereo hand tracking</description>
  <maintainer email="dmitrii@gusev.tech">Dmitrii Gusev</maintainer>
  <license>GNU Public License 3.0</license>

  <!-- Build dependencies -->
  <build_depend>msg_hands</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>msg_hands</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
